Microsoft.VisualStudio.Internal.MicroBuild added as it is necessary for building the vsmanproj correctly. Fixed MicroBuildInsertVsPayload to target the new vsman file. Fixed the SBOMFileDestPath location. Added an override for the GetVsixPrimaryOutputs as the path to the JSON manifest in the original has an incorrect assumption. Currently removed ProjectSystemSetup from being the main debug target.

--- a/eng/pipelines/templates/build-official-release.yml
+++ b/eng/pipelines/templates/build-official-release.yml
@@ -58,13 +58,10 @@ jobs:
     # This is not a necessary task for the build to be successful.
     continueOnError: true
 
-  # https://dev.azure.com/devdiv/DevDiv/_wiki/wikis/DevDiv.wiki/29786/Common-setup-authoring-recommendations?anchor=including-sbom-support
+  # Allows creating SBOM information during the build.
+  # See: https://dev.azure.com/devdiv/DevDiv/_wiki/wikis/DevDiv.wiki/29786/Common-setup-authoring-recommendations?anchor=including-sbom-support
   - task: MicroBuildSbomPlugin@1
     displayName: Install SBOM Plugin
-
-  # # Necessary for building the .swixproj (VSIX package) and .vsmanproj (VS Insertion) projects.
-  # - task: MicroBuildSwixPlugin@4
-  #   displayName: Install Swix Plugin
 
   # This requires the OptimizationInputs via the 'Publish OptimizationInputs drop' step in the release pipeline.
   # To generate ProfilingInputs for the first time, set this input: ShouldSkipOptimize: true
