--- a/eng/imports/Packages.targets
+++ b/eng/imports/Packages.targets
@@ -11,6 +11,7 @@
     <PackageReference Update="Microsoft.DiaSymReader.Pdb2Pdb"                                         Version="1.1.0-beta2-22320-02" />
     <PackageReference Update="Microsoft.DotNet.XliffTasks"                                            Version="1.0.0-beta.23073.2" />
     <PackageReference Update="Microsoft.SourceLink.GitHub"                                            Version="1.1.1" />
+    <PackageReference Update="Microsoft.VisualStudio.Internal.MicroBuild"                             Version="2.0.115" />
     <PackageReference Update="Microsoft.VisualStudio.Internal.MicroBuild.Swix"                        Version="2.0.115" />
     <PackageReference Update="Microsoft.VisualStudio.Internal.MicroBuild.Vsman"                       Version="2.0.115" />
     <PackageReference Update="Microsoft.VisualStudioEng.MicroBuild.Core"                              Version="1.0.0" />
