--- a/setup/SetupManifest/SetupProject.csproj
+++ b/setup/SetupManifest/SetupProject.csproj
@@ -6,6 +6,9 @@
   <Import Project="..\..\eng\imports\VisualStudio.props" />
 
   <ItemGroup>
+    <!-- If ReferenceOutputAssembly is not set to false, it will attempt to compile the VSMAN file itself (somehow ends up in the list of Compile items). -->
+    <!-- CSC error CS0009: Metadata file 'C:\Code\project-system\artifacts\Release\VSSetup\Insertion\SetupManifest.vsman' could not be opened. Image is too small. [C:\Code\project-system\setup\SetupManifest\SetupProject.csproj] -->
+    <!-- If Restore isn't explicitly sent, the Microsoft.VisualStudio.Internal.MicroBuild.Vsman PackageReference in the vsmanproj will not be restored. -->
     <ProjectReference Include="SetupManifest.vsmanproj" ReferenceOutputAssembly="false" Targets="Restore;Build" />
   </ItemGroup>
 
