Suggestion by Andrew Arnott on not generating AssemblyVersionInfo for swixproj/vsmanproj as it not needed and causes errors if Language is not set to a supported language.

--- a/setup/Directory.Build.props
+++ b/setup/Directory.Build.props
@@ -58,6 +58,8 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(MSBuildProjectExtension)' == '.vsmanproj' or '$(MSBuildProjectExtension)' == '.swixproj'">
+    <!-- Having GenerateAssemblyVersionInfo enabled causes issues with Language requirements in NerdBank.GitVersioning. -->
+    <GenerateAssemblyVersionInfo>false</GenerateAssemblyVersionInfo>
     <FinalizeManifest>true</FinalizeManifest>
     <FinalizeSkipLayout>true</FinalizeSkipLayout>
     <IsPackage>true</IsPackage>
