--- a/eng/imports/Packages.targets
+++ b/eng/imports/Packages.targets
@@ -15,7 +15,7 @@
     <PackageReference Update="Microsoft.VisualStudio.Internal.MicroBuild.Swix"                        Version="2.0.115" />
     <PackageReference Update="Microsoft.VisualStudio.Internal.MicroBuild.Vsman"                       Version="2.0.115" />
     <PackageReference Update="Microsoft.VisualStudioEng.MicroBuild.Core"                              Version="1.0.0" />
-    <PackageReference Update="Nerdbank.GitVersioning"                                                 Version="3.5.107" />
+    <PackageReference Update="Nerdbank.GitVersioning"                                                 Version="3.6.79-alpha" />
     <PackageReference Update="Nerdbank.Streams"                                                       Version="2.9.112" />
     <PackageReference Update="System.IO.Pipelines"                                                    Version="6.0.3" />
 
