--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -130,6 +130,10 @@
   <ItemGroup>
     <!-- We use immutable collections extensively and expect no naming conflicts. -->
     <Using Include="System.Collections.Immutable" />
+    <!-- There are two namespaces via which MEF attributes are defined. This is the correct one. -->
+    <Using Include="System.ComponentModel.Composition" />
+    <!-- Discourage importing all of Microsoft.VisualStudio.Composition by aliasing the most common type(s) we actually use from that namespace. -->
+    <Using Include="Microsoft.VisualStudio.Composition.ImportCardinality" Alias="ImportCardinality" />
     <!-- Prevent accidental use of Microsoft.VisualStudio.Threading.IAsyncDisposable -->
     <Using Include="System.IAsyncDisposable" Alias="IAsyncDisposable" />
   </ItemGroup>
