Renamed SetupProject.csproj to just Setup.csproj. Added some more comments. Removed commented code.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -127,6 +127,7 @@
   </PropertyGroup>
 
   <!-- Implicit usings -->
+  <!-- See: https://learn.microsoft.com/dotnet/core/project-sdk/msbuild-props#using -->
   <ItemGroup>
     <!-- We use immutable collections extensively and expect no naming conflicts. -->
     <Using Include="System.Collections.Immutable" />
