Turn on option to reuse existing localization PRs if available.

--- a/eng/pipelines/templates/generate-localization.yml
+++ b/eng/pipelines/templates/generate-localization.yml
@@ -41,6 +41,7 @@ jobs:
       patVariable: $(dn-bot-ceapex-package-r)
       isCreatePrSelected: true
       isAutoCompletePrSelected: false
+      isShouldReusePrSelected: true
 
   ###################################################################################################################################################################
   # PUBLISH ARTIFACTS
