Ensure RazorSourceGenerator.razorencconfig is included during design-time build

--- a/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/DesignTimeTargets/Microsoft.CSharp.DesignTime.targets
+++ b/src/Microsoft.VisualStudio.ProjectSystem.Managed/ProjectSystem/DesignTimeTargets/Microsoft.CSharp.DesignTime.targets
@@ -27,6 +27,23 @@
     <DefineCSharpItemSchemas>false</DefineCSharpItemSchemas>
   </PropertyGroup>
 
+  <!--
+    Backwards compatibility workaround for https://devdiv.visualstudio.com/DevDiv/_workitems/edit/1803616/.
+    Razor is dependent on RazorSourceGenerator.razorencconfig during design-time build in order to behave correctly.
+    The SDK conditionally includes this config file, however with the current global properties that are set,
+    the condition is not met and config file will not be included. This workaround ensures the config file is included during design-time build.
+    Tracking item to remove the workaround: https://devdiv.visualstudio.com/DevDiv/_workitems/edit/1806334.
+  -->
+  <PropertyGroup>
+    <RazorSdkDirectoryRoot Condition="'$(RazorSdkDirectoryRoot)' == ''">$(MSBuildThisFileDirectory)..\</RazorSdkDirectoryRoot>
+    <_RazorSdkSourceGeneratorDirectoryRoot>$(RazorSdkDirectoryRoot)\source-generators\</_RazorSdkSourceGeneratorDirectoryRoot>
+    <RazorEncConfigFile>$(_RazorSdkSourceGeneratorDirectoryRoot)RazorSourceGenerator.razorencconfig</RazorEncConfigFile>
+  </PropertyGroup>
+  <ItemGroup>
+    <EditorConfigFiles Remove="$(RazorEncConfigFile)" Condition="'$(DesignTimeBuild)' == 'true'"/>
+    <EditorConfigFiles Include="$(RazorEncConfigFile)" Condition="'$(DesignTimeBuild)' == 'true'"/>
+  </ItemGroup>
+
   <ItemGroup>
     <PropertyPageSchema Include="$(ManagedXamlResourcesDirectory)ProjectItemsSchema.CSharp.xaml;" />
 
